unpackaged/main/default/objects/Product2/fields/Analyses_realisees__c.field-meta.xml
<CustomField>
    <fullName>Analyses_realisees__c</fullName>
    <description>2PACE</description>
    <label>Analyse(s) réalisée(s)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>