unpackaged/main/default/objects/Product2/fields/Delai__c.field-meta.xml
<CustomField>
    <fullName>Delai__c</fullName>
    <description>2PACE</description>
    <label>Délai</label>
    <length>100</length>
    <type>Text</type>
</CustomField>