unpackaged/main/default/objects/Product2/fields/Espece__c.field-meta.xml
<CustomField>
    <fullName>Espece__c</fullName>
    <description>2PACE</description>
    <label>Espèce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chien,CHIEN</fullName>
                <label>Chien</label>
            </value>
            <value>
                <fullName>Chat,CHAT</fullName>
                <label>Chat</label>
            </value>
            <value>
                <fullName>Cheval,CHEV</fullName>
                <label>Cheval</label>
            </value>
            <value>
                <fullName>Lagomorphe,LAGOM</fullName>
                <label>Lagomorphe</label>
            </value>
            <value>
                <fullName>Oiseaux,OISE</fullName>
                <label>Oiseaux</label>
            </value>
            <value>
                <fullName>Cobaye,COB</fullName>
                <label>Cobaye</label>
            </value>
            <value>
                <fullName>Furet,FURET</fullName>
                <label>Furet</label>
            </value>
            <value>
                <fullName>Reptile,REPT</fullName>
                <label>Reptile</label>
            </value>
            <value>
                <fullName>Rat,RAT</fullName>
                <label>Rat</label>
            </value>
            <value>
                <fullName>Souris,SO</fullName>
                <label>Souris</label>
            </value>
            <value>
                <fullName>Ane,ANE</fullName>
                <label>Ane</label>
            </value>
            <value>
                <fullName>Bovin,BOVIN</fullName>
                <label>Bovin</label>
            </value>
            <value>
                <fullName>Caprin,CAPRI</fullName>
                <label>Caprin</label>
            </value>
            <value>
                <fullName>Ovin,OVIDE</fullName>
                <label>Ovin</label>
            </value>
            <value>
                <fullName>Porc,POR</fullName>
                <label>Porc</label>
            </value>
            <value>
                <fullName>Autres,AUTRE</fullName>
                <label>Autres</label>
            </value>
            <value>
                <fullName>A définir</fullName>
                <isActive>false</isActive>
                <label>- A définir</label>
            </value>
            <value>
                <fullName>Dauphin</fullName>
                <isActive>false</isActive>
                <label>Dauphin</label>
            </value>
            <value>
                <fullName>Rongeur</fullName>
                <isActive>false</isActive>
                <label>Rongeur</label>
            </value>
            <value>
                <fullName>Toutes</fullName>
                <isActive>false</isActive>
                <label>Toutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>