unpackaged/main/default/objects/Product2/fields/Favorite__c.field-meta.xml
<CustomField>
    <fullName>Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Champ pour mettre en avant le produit dans OCO</inlineHelpText>
    <label>Favori</label>
    <type>Checkbox</type>
</CustomField>