unpackaged/main/default/objects/Product2/fields/infos__c.field-meta.xml
<CustomField>
    <fullName>infos__c</fullName>
    <description>2PACE</description>
    <label>infos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>