unpackaged/main/default/objects/Product2/fields/Logique_Preanalytique__c.field-meta.xml
<CustomField>
    <fullName>Logique_Preanalytique__c</fullName>
    <description>2PACE</description>
    <inlineHelpText>Ex: 1 ET 2 OU 3 ; 1 ET 2 ; 1 OU 2 etc....</inlineHelpText>
    <label>Logique Pré-analytique</label>
    <length>80</length>
    <type>Text</type>
</CustomField>