unpackaged/main/default/objects/Product2/fields/March_Cerba_Vet__c.field-meta.xml
<CustomField>
    <fullName>March_Cerba_Vet__c</fullName>
    <description>Définit la liste des produits accessibles pour un client en fonction son marché</description>
    <inlineHelpText>Définit la liste des produits accessibles pour un client en fonction son marché</inlineHelpText>
    <label>Marché Cerba Vet</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Cerba_Vet_oco</valueSetName>
    </valueSet>
</CustomField>