unpackaged/main/default/objects/Product2/fields/Nature_des_prelevements__c.field-meta.xml
<CustomField>
    <fullName>Nature_des_prelevements__c</fullName>
    <label>Nature des prélèvements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCO_nature_prelevement</valueSetName>
    </valueSet>
</CustomField>