unpackaged/main/default/objects/Product2/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ permet de mettre en avant un examen en tant que nouveau dans l&#39;application OCO (Ordonnance Connectée).</description>
    <inlineHelpText>Ce champ permet de mettre en avant un examen en tant que nouveau dans l&#39;application OCO (Ordonnance Connectée).</inlineHelpText>
    <label>Nouveauté</label>
    <type>Checkbox</type>
</CustomField>