unpackaged/main/default/objects/Product2/fields/oco_custom_field_label__c.field-meta.xml
<CustomField>
    <fullName>oco_custom_field_label__c</fullName>
    <description>Label permettant à OCO d&#39;afficher un champ personnalisé. Si rempli, cocher oco_custom_field_visible</description>
    <inlineHelpText>Label permettant à OCO d&#39;afficher un champ personnalisé. Si rempli, cocher oco_custom_field_visible</inlineHelpText>
    <label>oco_custom_field_label</label>
    <type>TextArea</type>
</CustomField>