unpackaged/main/default/objects/Product2/fields/oco_custom_field_visible__c.field-meta.xml
<CustomField>
    <fullName>oco_custom_field_visible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur permettant à OCO d&#39;afficher un champ personnaliser. Si coché, remplir oco_custom_field_label</description>
    <inlineHelpText>Indicateur permettant à OCO d&#39;afficher un champ personnaliser. Si coché, remplir oco_custom_field_label</inlineHelpText>
    <label>oco_custom_field_visible</label>
    <type>Checkbox</type>
</CustomField>