unpackaged/main/default/objects/Product2/fields/Preanalytique__c.field-meta.xml
<CustomField>
    <fullName>Preanalytique__c</fullName>
    <description>2PACE</description>
    <inlineHelpText>Nomenclature :  Matrice ; Contenant/tube ; Température de Transport</inlineHelpText>
    <label>Pré-analytique</label>
    <type>TextArea</type>
</CustomField>