unpackaged/main/default/objects/Product2/fields/seuil_de_positivite__c.field-meta.xml
<CustomField>
    <fullName>seuil_de_positivite__c</fullName>
    <description>2PACE</description>
    <label>seuil de positivité</label>
    <length>100</length>
    <type>Text</type>
</CustomField>