unpackaged/main/default/objects/Product2/fields/stabilite_autre__c.field-meta.xml
<CustomField>
    <fullName>stabilite_autre__c</fullName>
    <description>2PACE</description>
    <label>Stabilité (autres températures même subs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>