unpackaged/main/default/objects/Product2/fields/SubContracting__c.field-meta.xml
<CustomField>
    <fullName>SubContracting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ permet de mettre en avant dans l&#39;application OCO (Ordonnance Connectée) si l&#39;examen requiert une sous traitance.</description>
    <inlineHelpText>Ce champ permet de mettre en avant dans l&#39;application OCO (Ordonnance Connectée) si l&#39;examen requiert une sous traitance.</inlineHelpText>
    <label>Analyse Sous-traitée</label>
    <type>Checkbox</type>
</CustomField>