unpackaged/main/default/objects/Product2/fields/Visible_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Visible_Catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2PACE</description>
    <inlineHelpText>Produit Présent sur FDE et Site web</inlineHelpText>
    <label>Visible Catalogue</label>
    <type>Checkbox</type>
</CustomField>