unpackaged/main/default/objects/Product2/listViews/CerbaVet_Transport.listView-meta.xml
<ListView>
    <fullName>CerbaVet_Transport</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>SBQQ__PricingMethod__c</columns>
    <columns>SBQQ__ChargeType__c</columns>
    <columns>SBQQ__NonDiscountable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Cerbavet Transport</value>
    </filters>
    <label>CerbaVet Transport</label>
</ListView>